Emmet for HTML & CSS

--- a/exercise-2-productivity-tricks/start/index.html
+++ b/exercise-2-productivity-tricks/start/index.html
@@ -28,9 +28,9 @@
 <body>
   <div id="app" class="container">
     <div class="has-text-centerd">
-      <img src="logo.png" alt="" width="1055" height="269" />
+      <img src="logo.png" alt="" width="1055" height="269"  />
     </div>
-    <div class="section">
+    <section class="section">
       <div class="columns">
         <div class="column is-10">
           <input type="text" id="colorInput" class="input is-large">
@@ -41,7 +41,7 @@
           </a>
         </div>
       </div>
-    </div>
+    </section>
   </div>
 </body>
 
